230613-index,header 버튼 디테일 수정

--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
         이게뭐약에서 당신의 건강을 완성해보세요!
       </p>
       <a href="">
-        <button>바로가기</button>
+        <button style="font-family: 'NanumSquareNeo-Variable'">바로가기</button>
       </a>
     </div>
   </div>
