--- a/src/main/resources/static/footer.html
+++ b/src/main/resources/static/footer.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script> -->
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="/css/footer.css">
   <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
   <title>footer</title>
 </head>
 
 <footer>
   <div id="f-footer">
-    <img src="img/footerimg.jpg" alt="이미지">
+    <img src="/img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
       <p>© 2023 이게뭐약? Company. All rights reserved.</p>
