--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
   <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="/css/header.css">
   <title>header</title>
 </head>
 
@@ -29,15 +29,17 @@
       </div>
     </div>
     <a class="text-sm-center nav-link" aria-current="page" href="/" id="logo">
-      <img class="logo" src="img/logo3.png" alt="">
+      <img class="logo" src="/img/logo3.png" alt="">
     </a>
-    <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-      <input type="text" placeholder="검색어를 입력하세요" style="font-family: 'NanumSquareNeo-Variable';">
-      <button type="submit"></button>
+    <div class="flex-sm-fill">
+      <form action="" class="text-sm-center nav-link" id="search-bar">
+        <input type="text" placeholder="검색어를 입력하세요" style="font-family: 'NanumSquareNeo-Variable';">
+        <button type="submit"></button>
+      </form>
     </div>
     <div class="flex-sm-fill text-sm-center nav-link" id="util">
-      <a href="#" id="logoin" style="font-family: 'NanumSquareNeo-Variable';">로그인</a>
-      <a href="#" id='signup' style="font-family: 'NanumSquareNeo-Variable';">회원가입</a>
+      <a href="/login" id="logoin" style="font-family: 'NanumSquareNeo-Variable';">로그인</a>
+      <a href="/join" id='signup' style="font-family: 'NanumSquareNeo-Variable';">회원가입</a>
     </div>
   </nav>
   <br>
