--- a/html/header.html
+++ b/html/header.html
@@ -15,7 +15,7 @@
 <header id="header">
 
   <nav class="nav nav-pills flex-column flex-sm-row">
-    <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="checkbox">
+    <div class="flex-sm-fill text-right nav-link" aria-current="page" href="#" id="checkbox">
       <input type="checkbox" id="icon">
       <label for="icon" id="icon">
         <span></span>
